--- a/essays/e10.md
+++ b/essays/e10.md
@@ -8,7 +8,7 @@ published: true
 labels:
   - Reflection
 ---
-
+<img width="500px" class="rounded float-start pe-4" src="../img/TS.jpg">
 ## Reflection on Typescript
 TypeScript is more straightforward and beginner-friendly than Java. It combines the flexibility of JavaScript with added features like static typing, which helps catch errors early. Unlike Java, which can be wordy and require a lot of setup, TypeScript is more straightforward and focuses on getting things done with less effort.
 
