--- a/essays/e10.md
+++ b/essays/e10.md
@@ -9,6 +9,9 @@ labels:
   - Reflection
 ---
 
+<img width="300px" class="rounded float-start pe-4" src="../img/tspic.jpeg">
+
+
 ## Reflection on Typescript
 TypeScript is more straightforward and beginner-friendly than Java. It combines the flexibility of JavaScript with added features like static typing, which helps catch errors early. Unlike Java, which can be wordy and require a lot of setup, TypeScript is more straightforward and focuses on getting things done with less effort.
 
