--- a/essays/e10.md
+++ b/essays/e10.md
@@ -9,15 +9,15 @@ labels:
   - Reflection
 ---
 
-<img width="300px" class="rounded float-start pe-4" src="../img/tspic.jpeg">
+<img width="500px" class="rounded float-start pe-4" src="../img/tspic.jpeg">
 
 
 ## Reflection on Typescript
-TypeScript is more straightforward and beginner-friendly than Java. It combines the flexibility of JavaScript with added features like static typing, which helps catch errors early. Unlike Java, which can be wordy and require a lot of setup, TypeScript is more straightforward and focuses on getting things done with less effort.
+TypeScript is more straightforward and beginner-friendly than Java for me. It combines the flexibility of JavaScript with added features like static typing, which helps catch errors early. Unlike Java, which has so many words and requires a lot of setup, TypeScript is more straightforward and focuses on getting things done with less effort.
 
 TypeScript’s innovative features, like type inference, mean you don’t have to define everything manually—it figures a lot out for you. 
 
 ## Thought on the WODS
-I really enjoy the WODs because they give a great opportunity to get hands-on practice with coding.
+I really enjoy the WODs because they’re a great way to get hands-on practice with coding. Instead of just learning theory, you get to solve real problems and experiment with code. This makes it easier to understand concepts and improves your skills faster.
 
-By working through a WOD, you can solve real problems, experiment with code, and  improve your understanding a lot faster. It’s also a great way to build confidence as you see your skills improve over time. The time constraint or focus of WODs can make them feel like a fun, productive workout for your brain. 
+WODs also help me build confidence because you can see yourself improving over time. The time limits or specific goals make them feel like fun little challenges, almost like a workout for your brain. They push you just enough to learn and grow without feeling overwhelmed. For our first in-person WOD, I was nervous that I would fail, but I ended up passing with less than a minute left.
