--- a/essays/e10.md
+++ b/essays/e10.md
@@ -21,3 +21,6 @@ TypeScript’s innovative features, like type inference, mean you don’t have t
 I really enjoy the WODs because they’re a great way to get hands-on practice with coding. Instead of just learning theory, you get to solve real problems and experiment with code. This makes it easier to understand concepts and improves your skills faster.
 
 WODs also help me build confidence because you can see yourself improving over time. The time limits or specific goals make them feel like fun little challenges, almost like a workout for your brain. They push you just enough to learn and grow without feeling overwhelmed. For our first in-person WOD, I was nervous that I would fail, but I ended up passing with less than a minute left.
+
+## Learning Goals for ICS 314
+My main goal for this class is to become proficient in TypeScript by understanding the basics and applying them effectively in coding projects and problem-solving. I also want to focus on improving my performance in the WODs, aiming to complete them successfully and on time to build confidence and reinforce my skills. Lastly, I want to stay on top of assignments and avoid late work because I have already turned in a couple of things in late already.
