--- a/essays/e10.md
+++ b/essays/e10.md
@@ -24,3 +24,5 @@ WODs also help me build confidence because you can see yourself improving over t
 
 ## Learning Goals for ICS 314
 My main goal for this class is to become proficient in TypeScript by understanding the basics and applying them effectively in coding projects and problem-solving. I also want to focus on improving my performance in the WODs, aiming to complete them successfully and on time to build confidence and reinforce my skills. Lastly, I want to stay on top of assignments and avoid late work because I have already turned in a couple of things in late already.
+
+  The essay above used ChatGpt to correct grammar and spelling mistakes.
